Bug 172406 - Crash kwordquiz startup spanish.kvtml
Summary: Crash kwordquiz startup spanish.kvtml
Status: RESOLVED FIXED
Alias: None
Product: kwordquiz
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Hedlund
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-08 16:42 UTC by Claudio Nieder
Modified: 2008-12-03 00:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudio Nieder 2008-10-08 16:42:26 UTC
Version:            (using KDE 4.1.1)
OS:                Linux
Installed from:    Ubuntu Packages

Using Ubuntu package 

$ dpkg-query -W  kwordquiz
kwordquiz	4:4.1.2-0ubuntu1

perform

$ cd /tmp
$ wget http://edu.kde.org/contrib/kvtml/spanisch.kvtml
--2008-10-08 16:39:19--  http://edu.kde.org/contrib/kvtml/spanisch.kvtml
Resolving edu.kde.org... 62.70.27.118
Connecting to edu.kde.org|62.70.27.118|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 40143 (39K) [text/plain]
Saving to: `spanisch.kvtml'

100%[======================================>] 40,143       127K/s   in 0.3s    

2008-10-08 16:39:19 (127 KB/s) - `spanisch.kvtml' saved [40143/40143]

$ kwordquiz spanisch.kvtml 
kwordquiz(5682) KEduVocDocument::KEduVocDocument: constructor done
kwordquiz(5682) KToolInvocation::klauncher: klauncher not running... launching kdeinit
kdeinit4: preparing to launch /usr/lib/kde4/libexec/klauncher
kdeinit4: preparing to launch /usr/bin/kded4
kdeinit4: preparing to launch /usr/bin/kbuildsycoca4
kbuildsycoca4 running...
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "screensavers/plasma.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "ooo-template.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "pan.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "anki.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "gcalctool.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry MimeType in "thunderbird.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "/usr/share/applications/screensavers/plasma.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "/usr/share/applications/ooo-template.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "/usr/share/applications/pan.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "/usr/share/applications/anki.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry Categories in "/usr/share/applications/gcalctool.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kbuildsycoca4(5699) KConfigGroup::readXdgListEntry: List entry MimeType in "/usr/share/applications/thunderbird.desktop" is not compliant with XDG standard (missing trailing semicolon). 
kdeinit4: preparing to launch /usr/lib/kde4/libexec/kconf_update
kded(5695): Communication problem with  "kded" , it probably crashed. 
Error message was:  "org.freedesktop.DBus.Error.NoReply" : " "Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken." " 

kwordquiz(5682):  Error: Invalid identifier index:  0 
ASSERT failure in QList<T>::operator[]: "index out of range", file /usr/include/qt4/QtCore/qlist.h, line 401
KCrash: Application 'kwordquiz' crashing...
sock_file=/home/t-a/.kde/socket-garfield.inodes.ch/kdeinit4__0
kdeinit4: preparing to launch /usr/lib/kde4/libexec/drkonqi
kded(5696): "KLauncher could not be reached via D-Bus. Error when calling kdeinit_exec_wait:
empty
" 

And the KDE crash handler shows me

Application: KWordQuiz (kwordquiz), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0xb606a6c0 (LWP 5682)]
[New Thread 0xb469ab90 (LWP 5688)]
[KCrash handler]
#5  0xb696da16 in raise () from /lib/libc.so.6
#6  0xb696f318 in abort () from /lib/libc.so.6
#7  0xb74d8795 in qt_message_output () from /usr/lib/libQtCore.so.4
#8  0xb74d8872 in qFatal () from /usr/lib/libQtCore.so.4
#9  0xb74d88cc in qt_assert_x () from /usr/lib/libQtCore.so.4
#10 0xb7f27c8f in KEduVocDocument::identifier (this=0x86763b0, index=0)
    at /usr/include/qt4/QtCore/qlist.h:401
#11 0x08090e00 in KWQTableModel::headerData (this=0x863a9f8, section=0, 
    orientation=Qt::Horizontal, role=0)
    at /build/buildd/kdeedu-4.1.2/kwordquiz/src/kwqtablemodel.cpp:70
#12 0xb7202316 in QSortFilterProxyModel::headerData ()
   from /usr/lib/libQtGui.so.4
#13 0xb718754c in QHeaderView::paintSection () from /usr/lib/libQtGui.so.4
#14 0xb718d7e2 in QHeaderView::paintEvent () from /usr/lib/libQtGui.so.4
#15 0xb6d0878b in QWidget::event () from /usr/lib/libQtGui.so.4
#16 0xb703ff53 in QFrame::event () from /usr/lib/libQtGui.so.4
#17 0xb70d675f in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#18 0xb7181c4f in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#19 0xb718b392 in QHeaderView::viewportEvent () from /usr/lib/libQtGui.so.4
#20 0xb70d8d05 in ?? () from /usr/lib/libQtGui.so.4
#21 0xb75d004a in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#22 0xb6cb08ca in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#23 0xb6cb883a in QApplication::notify () from /usr/lib/libQtGui.so.4
#24 0xb7a9f72d in KApplication::notify (this=0xbfa8ceec, receiver=0x8692ac0, 
    event=0xbfa8a86c)
    at /build/buildd/kde4libs-4.1.2/kdeui/kernel/kapplication.cpp:311
#25 0xb75d0e61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#26 0xb6d1141e in ?? () from /usr/lib/libQtGui.so.4
#27 0xb6d07150 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#28 0xb6d078f2 in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#29 0xb6d06dc8 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#30 0xb6d078f2 in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#31 0xb6d077fe in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#32 0xb6d077fe in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#33 0xb6d06dc8 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#34 0xb6d078f2 in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#35 0xb6d06dc8 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#36 0xb6d078f2 in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#37 0xb6d06dc8 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#38 0xb6d078f2 in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#39 0xb6d077fe in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#40 0xb6d06dc8 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#41 0xb6d078f2 in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#42 0xb6d06dc8 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#43 0xb6e76fae in ?? () from /usr/lib/libQtGui.so.4
#44 0xb6e77335 in ?? () from /usr/lib/libQtGui.so.4
#45 0xb6e773a3 in ?? () from /usr/lib/libQtGui.so.4
#46 0xb6d14b7e in ?? () from /usr/lib/libQtGui.so.4
#47 0xb6d20e80 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#48 0xb6d4b7ea in ?? () from /usr/lib/libQtGui.so.4
#49 0xb643e6f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#50 0xb6441da3 in ?? () from /usr/lib/libglib-2.0.so.0
#51 0xb6441f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#52 0xb75fb478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#53 0xb6d4aee5 in ?? () from /usr/lib/libQtGui.so.4
#54 0xb75cf52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#55 0xb75cf6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#56 0xb7877395 in KSycocaPrivate::checkDatabase (this=0x8654e90, ifNotFound=
      {i = -1079459272})
    at /build/buildd/kde4libs-4.1.2/kdecore/sycoca/ksycoca.cpp:420
#57 0xb7877ce0 in KSycoca::findFactory (this=0x8716790, 
    id=KST_KProtocolInfoFactory)
    at /build/buildd/kde4libs-4.1.2/kdecore/sycoca/ksycoca.cpp:440
#58 0xb787b0cc in KSycocaFactory (this=0x86fdff8, 
    factory_id=KST_KProtocolInfoFactory)
    at /build/buildd/kde4libs-4.1.2/kdecore/sycoca/ksycocafactory.cpp:50
#59 0xb78816ca in KProtocolInfoFactory (this=0x86fdff8)
    at /build/buildd/kde4libs-4.1.2/kdecore/sycoca/kprotocolinfofactory.cpp:29
#60 0xb787d474 in KProtocolInfo::proxiedBy (_protocol=@0xbfa8c308)
    at /build/buildd/kde4libs-4.1.2/kdecore/sycoca/kprotocolinfofactory.h:52
#61 0xb7d71cd0 in findProtocol (url=@0x873850c)
    at /build/buildd/kde4libs-4.1.2/kio/kio/kprotocolmanager.cpp:608
#62 0xb7d72054 in KProtocolManager::canCopyToFile (url=@0x873850c)
    at /build/buildd/kde4libs-4.1.2/kio/kio/kprotocolmanager.cpp:739
#63 0xb7d04e93 in KIO::FileCopyJobPrivate::startBestCopyMethod (this=0x87384b8)
    at /build/buildd/kde4libs-4.1.2/kio/kio/job.cpp:1786
#64 0xb7d05093 in KIO::FileCopyJobPrivate::slotStart (this=0x87384b8)
    at /build/buildd/kde4libs-4.1.2/kio/kio/job.cpp:1768
#65 0xb7d06d6e in KIO::FileCopyJob::qt_metacall (this=0x8722a58, 
    _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbfa8c478)
    at /build/buildd/kde4libs-4.1.2/obj-i486-linux-gnu/kio/jobclasses.moc:659
#66 0xb75e5a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#67 0xb75e67e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#68 0xb75ebdb7 in ?? () from /usr/lib/libQtCore.so.4
#69 0xb75ebedc in ?? () from /usr/lib/libQtCore.so.4
#70 0xb75e053f in QObject::event () from /usr/lib/libQtCore.so.4
#71 0xb6cb08ec in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#72 0xb6cb876e in QApplication::notify () from /usr/lib/libQtGui.so.4
#73 0xb7a9f72d in KApplication::notify (this=0xbfa8ceec, receiver=0x872e660, 
    event=0xbfa8c90c)
    at /build/buildd/kde4libs-4.1.2/kdeui/kernel/kapplication.cpp:311
#74 0xb75d0e61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#75 0xb75fed81 in ?? () from /usr/lib/libQtCore.so.4
#76 0xb75fb520 in ?? () from /usr/lib/libQtCore.so.4
#77 0xb643e6f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#78 0xb6441da3 in ?? () from /usr/lib/libglib-2.0.so.0
#79 0xb6441f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#80 0xb75fb478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#81 0xb6d4aee5 in ?? () from /usr/lib/libQtGui.so.4
#82 0xb75cf52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#83 0xb75cf6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#84 0xb7d96c9b in KIO::NetAccess::enter_loop (this=0xbfa8cbd8)
    at /build/buildd/kde4libs-4.1.2/kio/kio/netaccess.cpp:502
#85 0xb7d97029 in KIO::NetAccess::filecopyInternal (this=0xbfa8cbd8, 
    src=@0xbfa8cf00, target=@0xbfa8cbf0, permissions=-1, flags=
      {i = -1079456760}, window=0x0, move=false)
    at /build/buildd/kde4libs-4.1.2/kio/kio/netaccess.cpp:324
#86 0xb7d98427 in KIO::NetAccess::download (u=@0xbfa8cf00, target=@0xbfa8ce00, 
    window=0x0) at /build/buildd/kde4libs-4.1.2/kio/kio/netaccess.cpp:125
#87 0xb7f28a66 in KEduVocDocument::open (this=0x86763b0, url=@0xbfa8cf00)
    at /build/buildd/kdeedu-4.1.2/libkdeedu/keduvocdocument/keduvocdocument.cpp:251
#88 0x0806a45a in KWordQuizApp::openDocumentFile (this=0x84247a8, 
    url=@0xbfa8cf00)
    at /build/buildd/kdeedu-4.1.2/kwordquiz/src/kwordquiz.cpp:572
#89 0x0806d763 in main (argc=2, argv=0xbfa8d084)
    at /build/buildd/kdeedu-4.1.2/kwordquiz/src/main.cpp:72
#0  0xb69d9e7c in nanosleep () from /lib/libc.so.6

see also https://bugs.launchpad.net/kdeedu/+bug/279765
Comment 1 Peter Hedlund 2008-12-03 00:24:06 UTC
SVN commit 891835 by hedlund:

Handle file names on the command line better.

BUG:172406

 M  +2 -1      kwordquiz.cpp  
 M  +1 -1      main.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=891835