Handle file names on the command line better.

BUG:172406

svn path=/trunk/KDE/kdeedu/kwordquiz/; revision=891835